<resources>
    <string name="app_name">FirebaseDatabaseDemo</string>
    <string name="add_new_data">Add New Data</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="course">Course</string>
    <string name="add">Add</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_course">Please enter course</string>
    <string name="data_inserted_successfully">Data inserted successfully</string>
    <string name="student_list">Student List</string>
    <string name="student_name">Student Name</string>
    <string name="email_id">Email id</string>
    <string name="course_name">Course Name</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="name_intent">name</string>
    <string name="students">students</string>
    <string name="email_intent">email</string>
    <string name="course_intent">course</string>
    <string name="id">id</string>
    <string name="update">Update</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="hindi">Hindi</string>
    <string name="chinese">Chinese</string>
    <string name="languages">Languages</string>
</resources>