<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/languages">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/english_lang"
                    android:icon="@drawable/united_kingdom"
                    android:title="@string/english" />

                <item
                    android:id="@+id/arabic_lang"
                    android:icon="@drawable/united_arab_emirates"
                    android:title="@string/arabic" />

                <item
                    android:id="@+id/german_lang"
                    android:icon="@drawable/germany"
                    android:title="@string/german" />

                <item
                    android:id="@+id/spanish_lang"
                    android:icon="@drawable/spain"
                    android:title="@string/spanish" />

                <item
                    android:id="@+id/french_lang"
                    android:icon="@drawable/germany"
                    android:title="@string/french" />

                <item
                    android:id="@+id/hindi_lang"
                    android:icon="@drawable/india"
                    android:title="@string/hindi" />

                <item
                    android:id="@+id/chinese_lang"
                    android:icon="@drawable/china"
                    android:title="@string/chinese" />
            </group>
        </menu>
    </item>

</menu>